--- a/HomeHistory.Web/wwwroot/css/hh.css
+++ b/HomeHistory.Web/wwwroot/css/hh.css
@@ -8,13 +8,16 @@ body {
     }
 }
 
+
 /* Sidebar */
+
 .sidebar {
     position: fixed;
     top: 0;
     bottom: 0;
     left: 0;
-    padding: 58px 0 0; /* Height of navbar */
+    padding: 58px 0 0;
+    /* Height of navbar */
     /* box-shadow: 0 2px 5px 0 rgb(0 0 0 / 5%), 0 2px 10px 0 rgb(0 0 0 / 5%); */
     width: 240px;
     z-index: 600;
@@ -24,7 +27,8 @@ body {
     .sidebar {
         width: 100%;
     }
-}        
+}
+
 .sidebar .active {
     border-radius: 5px;
     box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
@@ -36,17 +40,17 @@ body {
     height: calc(100vh - 48px);
     padding-top: 0.5rem;
     overflow-x: hidden;
-    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+    overflow-y: auto;
+    /* Scrollable contents if viewport is shorter than content. */
 }
 
-
-div.k-loading-mask
-{
-    z-index: 3; /* must be larger than the z-index:2 of #container */
+div.k-loading-mask {
+    z-index: 3;
+    /* must be larger than the z-index:2 of #container */
 }
+
 
 /* div.k-loading-image
 {
     display: none;
 } */
-
